# docscan

./: .gitignore  README.md  app.py  packages.txt  pyproject.toml  requirements.in  requirements.txt
src/docscan/: __init__.py  cli.py  config.py  ui_streamlit.py
src/docscan/core/: pipeline.py  processing.py
src/docscan/utils/: io.py  ocr.py  pdf.py
tests/: test_processing.py
